# AdvEx1

./: AnomalyDetector.h  CLI.cpp  CLI.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  MainTrain.cpp  MainTrainEx3.cpp  MainTrainEx4.cpp  MainTrain_Ex5.cpp  MainTrain_Ex6.cpp  Server.cpp  Server.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  aLiveData.csv  anomaly_detection_util.cpp  anomaly_detection_util.h  commands.cpp  commands.h  ex5Main.cpp  main.cpp  micCircle.cpp  micCircle.h  minCircle.cpp  minCircle.h  output.txt  test.csv  testForEx1.cpp  timeseries.cpp  timeseries.h
Ex1 Files/: testForEx1.cpp
Ex2 files/: AnomalyDetector.h  MainTrainEx2.cpp  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  anomaly_detection_util.h  main.cpp  test.csv  timeseries.h
Ex3/: AnomalyDetector.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  MainTrain.h  MainTrainEx3.cpp  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  minCircle.cpp  minCircle.h
Ex3 files/: MainTrainEx3.cpp
Ex4 files/: MainTrainEx4.cpp
Ex5 files/: MainTrain_Ex5.cpp  output.txt
